# kiri

./: .gitignore  Cargo.toml  README.md  install.sh  pyproject.toml
docs/: product-vision.md
docs/plans/: 2026-02-24-rust-rewrite.md
packaging/: kiri.desktop
packaging/arch/: PKGBUILD
packaging/systemd/: kiri-sync.service  kiri-sync.timer
scripts/: kiri-popup.sh
src/: config.rs  main.rs  sync.rs  wakeword.rs
src/audio/: capture.rs  mod.rs  resample.rs
src/kiri/: __init__.py  config.py  keybind.py  onboarding.py  sync.py
src/kiri/audio/: mic.py  recorder.py  resampler.py
src/kiri/cli/: gui_main.py  main.py  sync_main.py
src/kiri/gui/: popup.py  states.py  styles.py
src/kiri/output/: clipboard.py  notes.py  typer.py
src/kiri/transcription/: engine.py  models.py
src/output/: clipboard.rs  mod.rs  notes.rs  typer.rs
src/transcribe/: whisper.rs
src/ui/: mod.rs  popup.rs  states.rs  styles.rs
